--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div> -->
         
         <div>
-            <h1 class="abtus">About us</h1><br>
+<!--             <h1 class="abtus">About us</h1><br> -->
             <div class="text-center">
                 <img src="./pictures/mcet.jpeg" style="width: 100%;"  class="rounded" alt="...">
               </div>
